# rustleaf

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  STATUS.md  debug_test.rs  deny.toml  example_usage.rs  justfile  lexer_review.md  parser.md  rustleaf.md  test-summary-mockup.html  test-summary.html  test-summary.md  test.rustleaf  test2.rustleaf  test3.rustleaf
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.claude/agents/: rust-code-reviewer.md  rust-expert-coder.md  rustleaf-language-expert.md  rustleaf-spec-officer.md
.claude/commands/: commit.md  merge.md  project-status.md  rebase.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  coverage.yml  release.yml
docs/: development.md  just.md  nodes.md  rustleaf-overview.md  rustleaf-spec.md  rustleaf.md  testing.md  vim.md
project-euler/: 001.rustleaf  002.rustleaf  003.rustleaf  004.rustleaf  005.rustleaf  006.rustleaf  007.rustleaf  008.rustleaf  009.rustleaf  010.rustleaf  fib.rustleaf
project/done/: DONE-split-eval-structs.md
project/planning/: 05-token-stream-abstraction.md  06-modularize-pattern-matching.md  08-implement-eval-visitor.md  10-ast-builder-patterns.md  WORK-error-handling-abstraction.md  refactor-compile-expression.md
rustleaf-macros/: Cargo.toml
rustleaf-macros-internal/: Cargo.toml
rustleaf-macros-internal/src/: lib.rs
rustleaf-macros/src/: function_wrapper.rs  lib.rs  method_wrapper.rs
scripts/: generate-test-summary.py
specs/: 00-table-of-contents.md  01-introduction.md  02-lexical-structure.md  03-types.md  04-variables.md  05-expressions.md  06-op-methods.md  06-statements.md  07-functions.md  08-pattern-matching.md  09-error-handling.md  10-modules.md  11-built-in-functions.md  12-standard-library.md  13-documentation-comments.md  14-memory-model.md  15-execution-model.md  16-rustvalue-integration.md  17-macros.md  18-appendices.md  99-issues.md  backup.md
src/: config.rs  eval.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs
src/config/: config.rs  mod.rs  window_state.rs
src/core/: args.rs  ast.rs  builtin_ops.rs  builtins.rs  eval_node.rs  iter.rs  macros.rs  mod.rs  value.rs  value_interop.rs
src/eval/: class.rs  compiler.rs  constructors.rs  core.rs  environment.rs  eval_structs.rs  eval_type_constant.rs  evaluator.rs  expressions.rs  function.rs  mod.rs  operators.rs  params.rs  scope.rs  statements.rs  type_constant.rs
src/lang/: mod.rs  parser.rs
src/lexer/: comments.rs  core.rs  error.rs  identifiers.rs  keywords.rs  lexer.rs  location.rs  mod.rs  numbers.rs  scanner.rs  string_interpolation.rs  strings.rs  test.rs  token.rs  token_rewrite.rs
src/modules/: environment.rs  loader.rs  mod.rs
src/parser/: ast.rs  binary_ops.rs  block.rs  core.rs  debug.rs  declarations.rs  expression.rs  expression_new.rs  expressions.rs  mod.rs  operators.rs  statement.rs  statement_new.rs  statements.rs  stream.rs  tracing.rs
src/ui/: font.rs  label.rs  mod.rs
tests/: evaluator.rs  lexer.rs  lexer_tests.rs  mod.rs  parser.rs  parser_basic.rs  rustleaf.rs
vscode-extension/: LICENSE  README.md  language-configuration.json  package.json  rustleaf-syntax-0.1.0.vsix
work/: 01-macro-parsing.md  02-range-operators.md  02-refactor-compile-expression.md  03-eliminate-binary-op-duplication.md  03-in-is-operators.md  04-super-keyword.md  05-raise-statement.md  06-string-interpolation.md  07-replace-string-method-names.md  09-consolidate-operators.md  11-expression-parser-registry.md
(+580 files in other folders)
