[workspace]
members = [".", "rustleaf-macros-internal", "rustleaf-macros"]

[package]
name = "rustleaf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustleaf"
path = "src/main.rs"

[lib]
name = "rustleaf"
path = "src/lib.rs"

[features]
default = []
parser-tracing = ["log", "env_logger"]

[dependencies]
anyhow = "1"
clap = { version = "4.0", features = ["derive"] }
indexmap = "2"
regex = "1"
rustleaf-macros-internal = { path = "rustleaf-macros-internal" }
rustleaf-macros = { path = "rustleaf-macros" }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }

[dev-dependencies]
tempfile = "3.0"