[workspace]
members = [".", "rustleaf-macros-internal", "rustleaf-macros"]

[package]
name = "rustleaf"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
description = "A simple programming language interpreter written in Rust"
repository = "https://github.com/barsae/rustleaf"
homepage = "https://github.com/barsae/rustleaf"
documentation = "https://docs.rs/rustleaf"
readme = "README.md"
keywords = ["interpreter", "language", "programming", "parser"]
categories = ["development-tools", "parsing"]

[[bin]]
name = "rustleaf"
path = "src/main.rs"

[lib]
name = "rustleaf"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
indexmap = "2"
regex = "1"
rustleaf-macros-internal = { version = "0.1.0", path = "rustleaf-macros-internal" }
rustleaf-macros = { version = "0.1.0", path = "rustleaf-macros" }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3.22"
