[package]
name = "rustleaf-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Procedural macros for the RustLeaf language interpreter"
repository = "https://github.com/barsae/rustleaf"
homepage = "https://github.com/barsae/rustleaf"
documentation = "https://docs.rs/rustleaf-macros"
keywords = ["macro", "procedural", "rustleaf"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }